# STAR-Edge

./: .gitignore  LSHDataLoader.py  README.md  eval_all.py  eval_thin.py  eval_thin_1cls.py  eval_thin_2opt.py  net.py  train_thin.py
LocalSH/: CMakeLists.txt  EdgePointRefine.cpp  EdgePointRefine.h  FittingLineSample.cpp  FittingLineSample.h  LocalSH.cpp  LocalSHFeature.cpp  LocalSHFeature.h  NormalRefine.cpp  NormalRefine.h  SHT.cpp  SHT.h  SphericalHarmonics_kk.cpp  SphericalHarmonics_kk.h  alglibinternal.cpp  alglibmisc.cpp  ap.cpp  linalg.cpp  optimization.cpp  solvers.cpp  specialfunctions.cpp
LocalSH/S2kit11/: CMakeLists.txt
LocalSH/S2kit11/include/s2kit/: weights.h
LocalSH/S2kit11/src/: FST_semi_fly.c  FST_semi_memo.c
LocalSH/S2kit11/src/legendre_polynomials/: cospml.c
LocalSH/S2kit11/src/util/: util.c
LocalSH/nanoflann/: CMakeLists.txt
config/: config_thin.yaml
dataset/: readme.md
model/: best.ckpt
pre_process/: pre_process_cls_gt_thin.py  pre_process_desc_thin.py  pre_process_thin.py
